--- a/css/styles.css
+++ b/css/styles.css
@@ -3,181 +3,243 @@ Element Targets
 h1, h2, native html elements etc etc etc
 =========================================== */
 html {
-  font-family: 'Josefin Sans', sans-serif;
-  background-color: black;
-}
-
-body {
-  margin: 0;
-}
-
-footer {
-  color: white;
-  padding: 1rem;
-}
-
-a {
-  text-decoration: none;
-  color: #ea80fc;
-}
-
-button {
-  font-family: 'Josefin Sans', sans-serif;
-}
-
-h1 {
-  font-weight: 300;
-  font-size: 4rem;
-  margin: 0;
-  color: white;
-}
-
-h3 {
-  color: white;
-  font-size: 2rem;
-  font-weight: 400;
-  margin: 0;
-}
-h4 {
-  color: grey;
-  font-weight: 400;
-  margin: 1rem 0;
-}
-p {
-  margin: 0;
-  font-weight: 300;
-  font-size: 1.5rem;
-  line-height: 1.5;
-  color: white;
-}
-/* ===========================================
-Containers
-Containers with spacing should go here
-=========================================== */
-.grid-main {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  height: 95vh;
-}
-
-.container-title {
-  margin: 0rem 0;
-}
-
-.container-description {
-  margin: 1rem 0;
-}
-
-.container-query {
-  display: grid;
-  align-self: center;
-  margin-left: 2rem;
-}
-
-.result-container {
-  display: flex;
-  justify-content: space-around;
-  align-self: center;
-}
-/* ===========================================
-Text styles
-=========================================== */
-.frontend {
-  color: #b2ff59;
-}
-
-.backend {
-  color: #f4ff81;
-}
-
-.db {
-  color: #ff80ab;
-}
-
-/* ===========================================
-Buttons
-Containers with spacing should go here
-=========================================== */
-.button-main {
-  background-color: #ffffff;
-  border: none;
-  color: black;
-  padding: 1rem;
-  padding-top: 1.3rem;
-  border-radius: 100px;
-  font-size: 2rem;
-  font-weight: 700;
-  width: 50%;
-  transition: all 0.15s;
-}
-.button-main:hover {
-  background-color: purple;
-  color: white;
-  transform: rotate3d(4, 4, 24, 3deg);
-}
-
-/*For Tablet Screens 640px - 1300px*/
-@media only screen and (min-width: 640px) and (max-width: 1300px) {
-  .button-main {
+    font-family: 'Josefin Sans', sans-serif;
+    background-color: black;
+  }
+  
+  body {
+    margin: 0;
+  }
+  
+  footer {
+    color: white;
     padding: 1rem;
-    padding-top: 1.3rem;
+  }
+  
+  a {
+    text-decoration: none;
+    color: #ea80fc;
+  }
+  
+  button {
+    font-family: 'Josefin Sans', sans-serif;
+  }
+  
+  h1 {
+    font-weight: 300;
+    font-size: 4rem;
+    margin: 0;
+    color: white;
+  }
+  
+  h3 {
+    color: white;
     font-size: 2rem;
-
-    width: 70%;
+    font-weight: 400;
+    margin: 0;
   }
-
-  .container-query {
-    margin-top: 4rem;
-    align-self: start;
-    
+  h4 {
+    color: grey;
+    font-weight: 400;
+    margin: 1rem 0;
   }
-  .result-container {
-    display: grid;
-    align-self: start;
-    top: 0;
+  p {
+    margin: 0;
+    font-weight: 300;
+    font-size: 1.5rem;
+    line-height: 1.5;
+    color: white;
   }
-
+  /* ===========================================
+  Containers
+  Containers with spacing should go here
+  =========================================== */
   .grid-main {
-    grid-template-columns: 1fr;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
     height: 95vh;
   }
-
-  h1 {
-    font-size: 2rem;
-  }
-
-  h3 {
-    font-size: 1.5rem;
-  }
-}
-
-/*For extra small screens*/
-@media screen and (min-width: 0px) and (max-width: 639px) {
-  .grid-main {
-    grid-template-columns: 1fr;
-  }
+  
   .container-title {
-    font-size: 4rem;
-    line-height: 1.5;
+    margin: 0rem 0;
   }
+  
+  .container-description {
+    margin: 1rem 0;
+  }
+  
   .container-query {
-    margin-top: 2rem;
-        margin-right: 2rem;
-    align-self: start;
-  }
-  .result-container {
     display: grid;
-    align-self: start;
-    
+    align-self: center;
+    margin-left: 2rem;
   }
+  
+  .result-container {
+    display: flex;
+    justify-content: space-around;
+    align-self: center;
+  }
+  /* ===========================================
+  Text styles
+  =========================================== */
+  .frontend {
+    color: #b2ff59;
+  }
+  
+  .backend {
+    color: #f4ff81;
+  }
+  
+  .db {
+    color: #ff80ab;
+  }
+  
+  /* ===========================================
+  Buttons
+  Containers with spacing should go here
+  =========================================== */
   .button-main {
+    background-color: #ffffff;
+    border: none;
+    color: black;
     padding: 1rem;
     padding-top: 1.3rem;
-
+    border-radius: 100px;
     font-size: 2rem;
-
-    width: 100%;
+    font-weight: 700;
+    width: 50%;
+    transition: all 0.15s;
   }
-
-
-}
+  .button-main:hover {
+    background-color: purple;
+    color: white;
+    transform: rotate3d(4, 4, 24, 3deg);
+  }
+  
+  /*For Tablet Screens 640px - 1300px*/
+  @media only screen and (min-width: 640px) and (max-width: 1300px) {
+    .button-main {
+      padding: 1rem;
+      padding-top: 1.3rem;
+      font-size: 2rem;
+  
+      width: 70%;
+    }
+  
+    .container-query {
+      margin-top: 4rem;
+      align-self: start;
+    }
+    .result-container {
+      display: grid;
+      align-self: start;
+      top: 0;
+    }
+  
+    .grid-main {
+      grid-template-columns: 1fr;
+      height: 95vh;
+    }
+  
+    h1 {
+      font-size: 2rem;
+    }
+  
+    h3 {
+      font-size: 1.5rem;
+    }
+  }
+  
+  /*For extra small screens*/
+  @media screen and (min-width: 0px) and (max-width: 639px) {
+      .grid-main {
+          grid-template-columns: 1fr;
+          height: inherit;
+        }
+        .container-title {
+          font-size: 6rem;
+          line-height: 1.5;
+        }
+        p {
+          font-size: 3rem;
+          width: 85%
+        }
+        .button-main {
+          margin-top: 2rem;
+          padding: 4rem;
+          padding-top: 4.3rem;
+      
+          font-size: 4rem;
+      
+          width: calc(100% - 2rem);
+        }
+        .result-container {
+          display: grid;
+          align-self: start;
+          margin: 4rem 0;
+        }
+      
+        .button-main:hover {
+          background-color: purple;
+          color: white;
+          transform: none;
+        }
+      
+        h3 {
+          font-size: 8rem;
+          font-weight: 400;
+          margin: 0;
+        }
+        h4 {
+          color: grey;
+          font-size: 4rem;
+          margin: 1rem 0;
+        }
+  }
+  
+  @media only screen and (device-width: 375px) and (device-height: 812px) and (-webkit-device-pixel-ratio: 3) {
+    .grid-main {
+      grid-template-columns: 1fr;
+      height: inherit;
+    }
+    .container-title {
+      font-size: 6rem;
+      line-height: 1.5;
+    }
+    p {
+      font-size: 3rem;
+      width: 85%
+    }
+    .button-main {
+      margin-top: 2rem;
+      padding: 4rem;
+      padding-top: 4.3rem;
+  
+      font-size: 4rem;
+  
+      width: calc(100% - 2rem);
+    }
+    .result-container {
+      display: grid;
+      align-self: start;
+      margin: 4rem 0;
+    }
+  
+    .button-main:hover {
+      background-color: purple;
+      color: white;
+      transform: none;
+    }
+  
+    h3 {
+      font-size: 8rem;
+      font-weight: 400;
+      margin: 0;
+    }
+    h4 {
+      color: grey;
+      font-size: 4rem;
+      margin: 1rem 0;
+    }
+  }
+  
