css fixes for large phones

--- a/css/styles.css
+++ b/css/styles.css
@@ -78,6 +78,7 @@ html {
     display: flex;
     justify-content: space-around;
     align-self: center;
+ 
   }
   /* ===========================================
   Text styles
@@ -134,6 +135,8 @@ html {
       display: grid;
       align-self: start;
       top: 0;
+      justify-self: start;
+      margin-left: 2rem;
     }
   
     .grid-main {
@@ -142,12 +145,16 @@ html {
     }
   
     h1 {
-      font-size: 2rem;
+      font-size: 3rem;
     }
   
     h3 {
-      font-size: 1.5rem;
+      font-size: 3.5rem;
     }
+ 
+ h4 {
+font-size:   1.5rem;
+ }
   }
   
   /*For extra small screens*/
@@ -177,6 +184,8 @@ html {
           display: grid;
           align-self: start;
           margin: 4rem 0;
+          justify-self: start;
+          margin-left: 2rem;
         }
       
         .button-main:hover {
